RESOLVED FIXED262779
[GTK] Display VBlank monitor stops when the monitor is off
https://bugs.webkit.org/show_bug.cgi?id=262779
Summary [GTK] Display VBlank monitor stops when the monitor is off
Carlos Garcia Campos
Reported 2023-10-06 05:03:35 PDT
When the monitor we are using to get the vblank signal is off or suspended, drmWaitVBlank fails with -EPERM. That's considered fatal error and we stop sending the signal to the web process, so that when the monitor is back we don't get any display update. This only happens in the few cases in which the view is not notified to be non-visible, and the vblank monitor keeps running. In those cases we can just handle the error and keep trying after sleeping for a while until it successes again.
Attachments
Carlos Garcia Campos
Comment 1 2023-10-06 05:08:10 PDT
EWS
Comment 2 2023-10-06 06:40:45 PDT
Committed 268988@main (b727a1776a5f): <https://commits.webkit.org/268988@main> Reviewed commits have been landed. Closing PR #18759 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.