[GTK] Display VBlank monitor stops when the monitor is off https://bugs.webkit.org/show_bug.cgi?id=262779

Reviewed by Alejandro G. Castro.

When the monitor we are using to get the vblank signal is off or
suspended, drmWaitVBlank fails with -EPERM. That's considered fatal
error and we stop sending the signal to the web process, so that when
the monitor is back we don't get any display update. This only happens
in the few cases in which the view is not notified to be non-visible,
and the vblank monitor keeps running. In those cases we can just handle
the error and keep trying after sleeping for a while until it successes
again.

* Source/WebKit/UIProcess/glib/DisplayVBlankMonitorDRM.cpp:
(WebKit::DisplayVBlankMonitorDRM::waitForVBlank const):

Canonical link: https://commits.webkit.org/268988@main